kube/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  labels:
    app: nginx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      containers:
        - name: nginx-gateway
          image: nginx:latest
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 25
            periodSeconds: 3
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      # nodeSelector:
      #   node-role.kubernetes.io/worker: worker
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-service
spec:
  selector:
    app: nginx-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
