kube/service-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  selector:
    matchLabels:
      app: service-1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
        - name: service-1
          image: champkub6/service1:v1.0.0
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

      # nodeSelector:
      #   node-role.kubernetes.io/worker: worker
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: service-1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
