kube/service-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
  labels:
    app: service-2
spec:
  selector:
    matchLabels:
      app: service-2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
        - name: service-2
          image: champkub6/service2:v3.0.0
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

      nodeSelector:
        node-role.kubernetes.io/worker: worker
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
