kube/service-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: son
  labels:
    app: son
spec:
  selector:
    matchLabels:
      app: son
  replicas: 1
  template:
    metadata:
      labels:
        app: son
    spec:
      containers:
        - name: son
          image: champkub6/service3:v5.0.0
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

      nodeSelector:
        node-role.kubernetes.io/worker: worker
---
apiVersion: v1
kind: Service
metadata:
  name: son
spec:
  selector:
    app: son
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
